deployment/oauth-proxy/deployment.yaml
---
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: oauth-proxy
  name: oauth-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "oauth-proxy"
  template:
    metadata:
      labels:
        app: oauth-proxy
    spec:
      containers:
        - name: oauth-proxy
          image: "oauth2-proxy/oauth2-proxy:v7.4.0"
---
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: oauth-proxy
  name: oauth-proxy
spec:
  rules:
    - host: dcs
      http:
        paths:
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: oauth-proxy
                port:
                  number: 4180
---
